src/sap.ui.table/src/sap/ui/table/themes/sap_hcb/Table.less
/* ... */
.sapUiTableRSel .sapUiTableTr > td.sapUiTableTdFirst {
	padding-left: 0;
}

/* Table Row Checkbox */
/* REQUIRES ICON FONTS */
.sapUiSizeCompact, .sapUiSizeCozy {
	.sapUiTableSelModeMultiToggle {
		.sapUiTableColRowHdr.sapUiTableSelAllEnabled::after,
		.sapUiTableRowHdr::after {
			content: '';
			display: block;
			position: absolute;
			width: 16px;
			height: 16px;
			border: 2px @sapHCStandardFG solid;
			background-color: @sapHCStandardBG;
			font-family: "SAP-icons";
			font-size: 11px;
			line-height: 12px;
			text-align: center;
			color: @sapHCStandardFG;
			box-sizing: border-box;
			margin: auto;
			top: 0;
			left: 0;
			bottom: 0;
			right: 0;
		}

		:not(.sapUiTableSelAll).sapUiTableSelAllEnabled.sapUiTableColRowHdr::after,
		.sapUiTableRowHdr.sapUiTableRowSel::after {
			content: '\e05b';
		}

		.sapUiTableColRowHdr .sapUiTableColRowHdrIco,
		.sapUiTableColRowHdr:hover .sapUiTableColRowHdrIco {
			display: none;
		}

	}
}

.sapUiSizeCondensed .sapUiTableSelModeMultiToggle .sapUiTableColRowHdr.sapUiTableSelAllEnabled::after {
	margin-top: 2px;
	font-size: 10px;
}

/* only display if data is available */
.sapUiSizeCompact .sapUiTableSelModeMultiToggle .sapUiTableRowHidden.sapUiTableRowHdr::after {
	display: none;
}

.sapUiSizeCompact .sapUiTableSelModeMultiToggle .sapUiTableColRowHdr.sapUiTableSelAllEnabled::after {
	margin-top: 7px;
}

.sapUiSizeCompact .sapUiTableSelModeMultiToggle .sapUiTableRowHdr:hover {
	background-color: @sapHCHighlightBG;
}

.sapUiSizeCompact .sapUiTableRowHdr.sapUiAnalyticalTableDummy:after {
	display: none;
}

.sapUiSizeCompact .sapUiTableSelModeMultiToggle :not(.sapUiTableSelAll).sapUiTableSelAllEnabled.sapUiTableColRowHdr::after,
.sapUiSizeCompact .sapUiTableSelModeMultiToggle .sapUiTableRowHdr.sapUiTableRowSel::after {
	content: '\e05b';
}

/*******************************************************************************
* TABLE ADOPTIONS BY UX
******************************************************************************/


/* Table Cells */

.sapUiTableCell {
	padding: 0 0.5rem;
}

.sapUiTableCell > .sapUiTv {
	font-weight: normal;
	font-size: 12px;
}

.sapUiTableTr > td.sapUiTableTdFirst > .sapUiTableCell {
	padding-left: 6px;
}

.sapUiTableRSel .sapUiTableTr > td.sapUiTableTdFirst > .sapUiTableCell {
	padding-left: 8px;
}

.sapUiSizeCondensed .sapUiTableTr > td.sapUiTableTdFirst > .sapUiTableCell {
	padding: 0;
}

.sapUiTableCtrl tr:hover:first-child {
	border: none;
}


/* Table Column */
.sapUiTableCol {
	padding-top: 7px;
}

.sapUiTableCol:hover,.sapUiTableColRowHdr:hover,
.sapUiSizeCompact .sapUiTableCol:hover,
.sapUiSizeCompact .sapUiTableColRowHdr:hover {
	background-color: @sapHCHighlightBG;
	color: @sapHCStandardFG;
}

.sapUiSizeCompact .sapUiTableCol,
.sapUiSizeCompact .sapUiTableColRowHdr {
	border-right: 1px solid @sapHCStandardFG;
}

.sapUiSizeCompact .sapUiTableTr > td {
	border-bottom: 1px solid @sapHCReducedAltFG;
}

.sapUiTableCtrl tr.sapUiTableRowHvr,
tr.sapUiTableRowHvr .sapUiLbl,
tr.sapUiTableRowHvr .sapUiTf,
tr.sapUiTableRowHvr .sapUiLnk,
tr.sapUiTableRowHvr .sapUiLnk:visited,
tr.sapUiTableRowHvr .sapUiLnk:hover,
.sapUiTableCol:hover,
.sapUiTableCol:hover .sapUiLbl,
.sapUiTableCol:hover .sapUiTf,
.sapUiTableCol:hover .sapUiLnk,
.sapUiTableCol:hover .sapUiLnk:visited,
.sapUiTableCol:hover .sapUiLnk:hover {
	color: @sapHCStandardFG;
}

.sapUiTableColCell {
	padding: 0 0.5rem;
}

.sapUiSizeCondensed .sapUiTableColCell {
	padding: 0 0.5rem;
}

.sapUiSizeCompact .sapUiTableColCell > .sapUiLbl,
.sapUiSizeCompact .sapUiTableColCell > .sapMLabel,
.sapUiSizeCompact .sapUiTableCell > .sapMLabel,
.sapUiTableColCell > .sapUiLbl {
	font-weight: normal;
	font-size: 0.875rem;
	color: @sapHCStandardFG;
}

.sapUiTableTr > td:focus, .sapUiTableRowHdrScr > .sapUiTableRowHdr:focus, .sapUiTableColHdr *:focus, .sapUiTableColRowHdr:focus {
	outline: 0.125rem dotted @sapHCStandardFG;
	outline-offset: -0.125rem;
}

.sapUiTableRSel .sapUiTableCtrlScr,
.sapUiTableRSel .sapUiTableCtrlScrFixed {
	margin-left: @sapUiTableRowHdrWidth;
}

.sapUiSizeCozy .sapUiTableRSel {
	.sapUiTableCtrlScr,
	.sapUiTableCtrlScrFixed {
		margin-left: @sapUiTableCozyRowHdrWidth;
	}
}

.sapUiSizeCompact .sapUiTableRSel .sapUiTableCtrlScr,
.sapUiSizeCompact .sapUiTableRSel .sapUiTableCtrlScrFixed {
	margin-left: @sapUiTableCompactRowHdrWidth;
}


.sapUiTableRSel .sapUiTableTr > td:first-child {
	border-right: none;
}

/* Table Column Selector */

.sapUiTableRowHdrScr,.sapUiTableColRowHdr {
	width: @sapUiTableRowHdrWidth;
}

.sapUiSizeCompact {
	.sapUiTableRowHdrScr,
	.sapUiTableColRowHdr {
		width: @sapUiTableCompactRowHdrWidth;
		min-height: @sapUiTableCompactRowHeight;
	}
}

.sapUiSizeCozy {
	.sapUiTableRowHdrScr,
	.sapUiTableColRowHdr {
		width: @sapUiTableCozyRowHdrWidth;
		min-height: @sapUiTableCozyRowHdrHeight;
	}
}

/* Table Column Resizer */
.sapUiTableColRsz:hover {
	background-color: @sapHCHighlightBG;
}

/* Table Row Tree Node */
.sapUiTableTr {
	color: @sapUiText;
	font-weight: normal;
}

.sapUiSizeCompact .sapUiTableCtrl tr {
	height: @sapUiTableCompactRowHeight;
}

.sapUiSizeCondensed .sapUiTableCtrl tr {
	height: @sapUiTableCondensedRowHeight;
}

.sapUiTableGroupIconOpen,
.sapUiTableTreeIconNodeOpen {
	background-image: url(img/ico12_open_minus.gif);
}

.sapUiTableGroupIconClosed,
.sapUiTableTreeIconNodeClosed {
	background-image: url(img/ico12_closed_plus.gif);
}

.sapUiTableTreeIconLeaf {
	background-image: url(img/ico12_leaf.gif);
}

.sapUiTableTreeIcon {
	margin-right: 6px;
}

.sapUiTableTreeIconLeaf {
	background-image: none;
}

.sapUiSizeCompact .sapUiTableGroupIcon {
	font-size: 0.875rem;
}

.sapUiTableHSb,
.sapUiTableCCnt,
.sapUiTableCtrlEmpty {
	background-color: @sapHCStandardBG;
}

.sapUiSizeCompact .sapUiTableTreeIcon:focus {
	outline: 0.125rem dotted @sapHCStandardFG;
}

.sapUiSizeCompact .sapUiTableGroupIcon::before,
.sapUiSizeCompact .sapUiTableTreeIcon::before {
	color: @sapHCStandardFG;
}
/* ... */

