[FIX] sap.ui.table.Table: Fix HCB Scrollbar Border
BCP: 1670174065

--- a/src/sap.ui.table/src/sap/ui/table/themes/sap_hcb/Table.less
+++ b/src/sap.ui.table/src/sap/ui/table/themes/sap_hcb/Table.less
@@ -300,7 +300,6 @@
 	border: none;
 }
 
-
 /* Table Column */
 .sapUiTableCol {
 	padding-top: 7px;
@@ -527,4 +526,8 @@ tr.sapUiTableRowHvr .sapUiLnk:hover,
 	::-webkit-scrollbar {
 		background-color: @sapHCStandardBG;
 	}
+}
+
+.sapUiTableVSb {
+	right: 4px;
 }
